--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "json-shapeshifter-ui",
+  "name": "symbiot-ui",
   "version": "0.1.0",
-  "description": "A Web UI for the shapeshifter project",
+  "description": "A Web UI for Symbiot",
   "license": "MIT",
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
